SFYouTubeApp/force-app/main/default/objects/VTM_YouTube_Video__c/VTM_YouTube_Video__c.object-meta.xml
<CustomObject>
    <label>YouTube Video</label>
    <nameField>
        <displayFormat>VTM-{00000}</displayFormat>
        <label>VTM_YouTube_Video_Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>YouTube Videos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>