SFYouTubeApp/force-app/main/default/objects/VTM_YouTube_Video__c/fields/Number_of_Dislikes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Dislikes__c</fullName>
    <label>Number of Dislikes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>