SFYouTubeApp/force-app/main/default/objects/VTM_YouTube_Video__c/fields/Number_of_View_Counts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_View_Counts__c</fullName>
    <label>Number of View Counts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>