SFYouTubeApp/force-app/main/default/objects/VTM_YouTube_Video__c/fields/Video_Id__c.field-meta.xml
<CustomField>
    <fullName>Video_Id__c</fullName>
    <description>This Field will show the unique YouTube Video Id for every video on YouTube</description>
    <label>Video Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>